Updates the project with content from 07.06s lesson

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="">Buy</a>
                 </li>
             </ul>
-            <div class="clearfix"></div>
+            <!--            <div class="clearfix"></div>-->
 
         </nav>
     </div>
@@ -64,15 +64,10 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio qui odio libero accusantium eum natus dicta molestiae cum voluptates, accusamus quas ullam labore ipsum quia dolor obcaecati ipsa laborum ex tenetur vitae inventore. Aliquam nesciunt ipsum illum fuga magni voluptates iure eligendi sequi sit. Dolorum deserunt consectetur ullam distinctio aperiam.</p>
         </div>
     </div>
-
-
-
-    <!--    <nav></nav>-->
-    <!--    <header></header>-->
-    <!--    <main></main>-->
-    <!--    <aside></aside>-->
-    <!--    <footer></footer>-->
-
+    
+    <div id="pricing-wrapper" class="main-container">
+        
+    </div>
 
 </body>
 
