Adds the lecture content from the 08.06.2016 : Lesson with Julian regarding Webdesign and Less. Adds the pricing section of the website.

--- a/index.html
+++ b/index.html
@@ -64,10 +64,63 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio qui odio libero accusantium eum natus dicta molestiae cum voluptates, accusamus quas ullam labore ipsum quia dolor obcaecati ipsa laborum ex tenetur vitae inventore. Aliquam nesciunt ipsum illum fuga magni voluptates iure eligendi sequi sit. Dolorum deserunt consectetur ullam distinctio aperiam.</p>
         </div>
     </div>
-    
+
     <div id="pricing-wrapper" class="main-container">
-        
+        <div class="content">
+            <article>
+                <div class="education"></div>
+                <h3>Education</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, beatae!</p>
+                <p>0.00€</p>
+            </article>
+            <article>
+                <div class="advanced"></div>
+                <h3>Advanced</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, beatae! Lorem ipsum dolor sit amet.</p>
+                <p>9.99€</p>
+            </article>
+            <article>
+                <div class="premium"></div>
+                <h3>Premium</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, beatae! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt, asperiores.</p>
+                <p>29.99€</p>
+            </article>
+        </div>
     </div>
+
+    <div id="buy-wrapper" class="main-container">
+        <article class="content">
+            <h2>Get Your License</h2>
+            <ul>
+                <li>Powerful</li>
+                <li>Fast</li>
+                <li>Cheap</li>
+                <li>All week</li>
+            </ul>
+
+            <div class="download-btn">
+                <a href="http://www.google.de">Download</a>
+            </div>
+        </article>
+    </div>
+
+    <footer id="footer-wrapper" class="main-container">
+        <nav>
+            <ul>
+                <li class="facebook">
+                    <a href="http://www.facebook.com"></a>
+                </li>
+                <li class="twitter">
+                    <a href="http://www.twitter.com"></a>
+                </li>
+                <li class="youtube">
+                    <a href="http://www.youtube.com"></a>
+                </li>
+                <p>All rights reserved &copy; 2015 Max Mustermann | Terms and Privacy</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, dolorem.</p>
+            </ul>
+        </nav>
+    </footer>
 
 </body>
 
