ADDs lesson content from 14.06.2016 -> Buy-wrapper modified -> footer-wrapper styled with image-sprites and some css formattings

--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
             <ul>
                 <li>
                     <div class="nav-hover"></div>
-                    <a href="">Info</a>
+                    <a href="#info-wrapper">Info</a>
                 </li>
                 <li>
                     <div class="nav-hover"></div>
-                    <a href="">Pricing</a>
+                    <a href="#pricing-wrapper">Pricing</a>
                 </li>
                 <li>
                     <div class="nav-hover"></div>
-                    <a href="">Extensions</a>
+                    <a href="#">Extensions</a>
                 </li>
                 <li>
                     <div class="nav-hover"></div>
-                    <a href="">Buy</a>
+                    <a href="#buy-wrapper">Buy</a>
                 </li>
             </ul>
             <!--            <div class="clearfix"></div>-->
@@ -110,16 +110,18 @@
                 <li class="facebook">
                     <a href="http://www.facebook.com"></a>
                 </li>
-                <li class="twitter">
-                    <a href="http://www.twitter.com"></a>
-                </li>
+
                 <li class="youtube">
                     <a href="http://www.youtube.com"></a>
                 </li>
-                <p>All rights reserved &copy; 2015 Max Mustermann | Terms and Privacy</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, dolorem.</p>
+                <li class="twitter">
+                    <a href="http://www.twitter.com"></a>
+                </li>
+
             </ul>
         </nav>
+        <p>All rights reserved &copy; 2015 Max Mustermann | Terms and Privacy</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, dolorem.</p>
     </footer>
 
 </body>
